Fixing up detector chapter

--- a/backmatter.tex
+++ b/backmatter.tex
@@ -32,16 +32,16 @@
 \acro{TEC}[TEC]{Tracker EndCap}
 \acro{EB}[EB]{ECAL Barrel}
 \acro{EE}[EE]{ECAL Endcaps}
-\acro{HB}[HB]{Hadron barrel calorimeter}
-\acro{HO}[HO]{Hadron outer calorimeter}
-\acro{HE}[HE]{Hadron endcap calorimeter}
-\acro{HF}[HF]{Hadron forward calorimeter}
+\acro{HB}[HB]{Hadron Barrel Calorimeter}
+\acro{HO}[HO]{Hadron Outer Calorimeter}
+\acro{HE}[HE]{Hadron Endcap Calorimeter}
+\acro{HF}[HF]{Hadron Forward Calorimeter}
 \acro{BSM}[BSM]{Beyond the Standard Model}
 \acro{L1}[L1]{Level-1}
 \acro{HLT}[HLT]{High-level trigger}
-\acro{CSCs}[CSCs]{Cathode strip chambers}
-\acro{DT}[DT]{Drift tube}
-\acro{RPCs}[RPCs]{Resistive plate chambers}
+\acro{CSCs}[CSCs]{Cathode Strip Chambers}
+\acro{DT}[DT]{Drift Tube}
+\acro{RPCs}[RPCs]{Resistive Plate Chambers}
 \acro{DAQ}[DAQ]{Data Acquisition}
 \acro{WLCG}[WLCG]{Worldwide LHC Computing Grid}
 \acro{RF}[RF]{radio frequency}
