--- a/Detector/Detector.tex
+++ b/Detector/Detector.tex
@@ -13,15 +13,15 @@ The \ac{LHC} was designed to collide beams of protons with each other at centre-
 energies of up to 14 TeV. It therefore consists of two rings in which the two beams
 of protons are individually accelerated. In addition to colliding beams of protons, the \ac{LHC}
 is also used for proton--lead and lead--lead collisions.
-
-The \ac{LHC} does not operate on its own, a chain of accelerators leads
-the protons into the \ac{LHC}. Figure \ref{fig:lhc_schematic} shows a schematic
-of the \ac{CERN} accelerator complex.
 \begin{figure}[h!]
-\includegraphics[width=0.8\textwidth]{./Detector/Plots/LHC_default.jpg}
+\includegraphics[width=0.6\textwidth]{./Detector/Plots/LHC_default.jpg}
 \caption{Schematic of the \ac{CERN} accelerator complex \cite{lhc-schematic}.}
 \label{fig:lhc_schematic}
 \end{figure}
+The \ac{LHC} does not operate on its own: the protons are lead into
+it via a chain of accelerators. Figure \ref{fig:lhc_schematic} shows a schematic
+of the \ac{CERN} accelerator complex.
+
 Protons originate from hydrogen gas, where electrons are stripped off the 
 hydrogen atoms using an electric field. The protons then pass through an injector
 chain which increases the energy of the protons in several steps. After the protons
@@ -35,17 +35,15 @@ beams. In the \ac{LHC} ring the beams are further accelerated to the required ce
 by eight \ac{RF} cavities. At design operation the beams consist of 2808 proton bunches each made up 
 of $\mathcal{O}(10^{11})$ protons, spaced 25ns apart. The beams are kept in circulation
 using 1232 niobium-titanium superconducting dipole magnets, cooled to operate at 
-a temperature of 1.9K and generating magnetic fields upwards of 8 Tesla.
+a temperature of 1.9K and generating magnetic fields of up to 8.4 Tesla.
 The beams collide at four points
 around the \ac{LHC} ring, where the collisions are recorded by the ATLAS\cite{atlas-jinst}, 
-CMS%\cite{cms-jinst} guess we've cited this already
-, ALICE\cite{alice-jinst}, and LHCb\cite{lhcb-jinst} detectors.
+\acs{CMS} \cite{cms-jinst}, ALICE\cite{alice-jinst}, and LHCb\cite{lhcb-jinst} detectors.
 
 The processes the \ac{LHC} was built to study have a small cross-section
 compared with the total proton-proton inelastic cross-section, as seen from figure
 \ref{fig:stirling_xs}. For example, the production cross-section of the
 standard model Higgs boson is 9-10 orders of magnitude smaller than the total p--p cross section.
-
 \begin{figure}[h!]
 \includegraphics[width=0.5\textwidth]{./Detector/Plots/crosssections2013.jpg}
 \caption{Total proton-proton cross section, and the cross-sections
@@ -54,15 +52,12 @@ The cross sections of these processes
 are often many orders of magnitude smaller than the total p--p cross section.}
 \label{fig:stirling_xs}
 \end{figure}
-
 In order to be able to study these relatively rare processes, 
 the LHC operates at high instantaneous luminosity, defined as
-
 \begin{equation}\label{eqn:CMSLHC_luminosity}
-\mathcal{L} = \frac{N_b^2n_bf_{\text{rev}}\gamma}{4\pi\epsilon_n\beta^{*}}F.
+\mathcal{L} = \frac{N_b^2n_bf_{\text{rev}}\gamma}{4\pi\epsilon_n\beta^{*}}F,
 \end{equation}
-
-In this equation, $N_b$ is the number of protons per bunch, $n_b$ the number of
+where $N_b$ is the number of protons per bunch, $n_b$ the number of
 bunches per beam, $f_{\text{rev}}$ the revolution frequency, $\gamma$ the 
 Lorentz factor, $\epsilon_n$ the normalised beam
 emittance, $\beta^{*}$ the $\beta$-function at the interaction point and F a reduction
@@ -77,25 +72,23 @@ This completed Run 1 of the \ac{LHC}, after which the 2-year \ac{LS1} was used t
 upgrade the \ac{LHC} and the detectors for collisions at a centre-of-mass energy of 13-14 TeV.
 
 In April 2015 the \ac{LHC} restarted with collisions at a centre-of-mass energy of 13 TeV, and during 
-this year 4.2 fb$^{-1}$ was delivered. The \ac{LHC} operated at a centre-of-mass energy of 13 TeV 
+this year 4.2 fb$^{-1}$ was delivered to \ac{CMS}. The \ac{LHC} operated at a centre-of-mass energy of 13 TeV 
 during 2016 too, when a total of 41.1 fb$^{-1}$ was delivered to \ac{CMS}.
 The integrated luminosity as a function of time is shown in figure \ref{fig:CMSLHC_intlumi},
 separated by running year.
-
 \begin{figure}[h!]
 \includegraphics[width=0.85\textwidth]{./Detector/Plots/int_lumi_cumulative_pp_2.pdf}
 \caption{Cumulative integrated luminosity delivered to \ac{CMS} for p--p collisions at the \ac{LHC}, separated
 by running year \cite{cms-lumi-public}.}
 \label{fig:CMSLHC_intlumi}
 \end{figure}
-
 The data-taking efficiency of CMS is not 100\%, for example the detector might be
 switched off for part of the time collisions are ongoing. In 2012, the data-taking 
 efficiency was 93.5\%, in 2015 it was 90.3\% and in 2016 it was 92.4 \%
 
 From all of the data that is recorded, only a subset is used for analysis. Data is 
 certified as good for use in analyses if it is known that all relevant subdetectors
-were functioning correctly. In 2012 the certification efficiency was 90.4\%
+were functioning correctly. In 2012 the certification efficiency was 90.4\%,
 meaning all subdetectors were working well for a dataset corresponding to 19.7 fb$^{-1}$.
 The certification efficiency was 60.4 \% in 2015, leading to 2.3 fb${-1}$ of 
 analysable data for which the full detector was operational. An additional 0.6 fb$^{-1}$
@@ -114,17 +107,10 @@ in October 2016 \cite{cms-lumi-public}.
 Due to the high operating luminosity, multiple proton-proton collisions per 
 bunch crossing are likely to occur. The average number of interactions
 per bunch crossing was 21 in 2012\cite{cms-lumi-public}. The average number of
-interactions per bunch crossing lowered again at the start of Run 2, with
+interactions per bunch crossing was lower than this at the start of Run 2, with
 an average of 14 interactions per bunch crossing for the data collected
-during 2015. In the data-taking period up to August 2016 the average number of interactions
-per bunch crossing increased to 24\footnote{NoteToBeRemovedBeforeSubmission: Lumi pog letting us down 
-here, no references for what number to quote/no prescriptions for how to calculate it. Use of theoretical
-min bias cross section (80mb) vs min bias cross section tuned for pu reweighting (less than 70 mb both for
-2015 and 2016) can shift the average by 5 evts or more! The 2016 number uses the theoretical
-cross section (only reference to this are various sets of slides presented at conferences), 2015
-number based on the min bias cross section used for pu reweighting (iirc). Assuming the 2012 numer,
-for which there is a public figure, uses the theoretical mb cross section should probably re-calculate the
-number for 2015.}. Additional 
+during 2015 \cite{CMS-PAS-HIG-16-006}. In the data-taking period up to August 2016 the average number of interactions
+per bunch crossing increased to 24 \cite{CMS-PAS-HIG-16-037}. Additional 
 interactions on top of events of interest are referred to as pile-up.
 
 \section{The \acs{CMS} detector}
@@ -136,21 +122,20 @@ function in the challenging high-luminosity environment.
 The detector is 21.6 m long, 14.6 m in diameter, and weighs
 12500 tonnes \cite{cms-jinst}. It consists of several subdetectors, as illustrated
 in figure \ref{fig:cms_detector}.
-
 \begin{figure}[h!]
 \includegraphics[width=0.8\textwidth]{./Detector/Plots/cms.png}
-\caption{A blow-up view of the \ac{CMS} detector \cite{cms-jinst}, indicating the
+\caption{A cutaway view of the \ac{CMS} detector \cite{cms-jinst}, indicating the
 different sub-parts of the detector.}
 \label{fig:cms_detector}
 \end{figure}
 
-Surrounding the interaction point is the silicon tracker, a cylinder 5.8 m in length and 2.6 m in 
-diameter. Surrounding the silicon tracker
-the lead-tungstate \ac{ECAL} is found, which in turn is enclosed
-by a brass scintilator \ac{HCAL}. 
+The silicon tracker, a cylinder 5.8 m in length and 2.6 m in
+diameter, surrounds the interaction point. The tracker is 
+surrounded by the lead-tungstate \ac{ECAL}, which is enclosed
+by the brass scintillator \ac{HCAL}.
 
 The tracking and calorimeter systems are surrounded by a superconducting
-solenoid, 13 meter long and 6 meter in diameter and operating at 3.8 Tesla.
+solenoid, 13 m long, 6 m in diameter and operating at 3.8 Tesla.
 Charged particles are bent in this magnetic field, allowing for precise 
 measurement of their momentum. Gaseous muon detectors are embedded in the 
 iron return yoke of the solenoid.
@@ -169,7 +154,6 @@ Distances in the $\eta-\phi$ plane are given as $\Delta R = \sqrt{(\Delta\eta)^2
 The subsystems of the \ac{CMS} detector will be described in more detail in the 
 next sections.
 
-
 \subsection{Tracker}
 \label{sec:CMSLHC_CMS_tracker}
 The tracker \cite{cms-jinst} is the subdetector closest to the interaction point. It
@@ -183,13 +167,17 @@ system also needs to be fast-responding in order to reconstruct trajectories acc
 At the same time, this large particle flux calls for a 
 radiation-hard design that is able to survive in this harsh environment
 for a longer period of time. These requirements motivate the use of a silicon tracking
-system. When a charged particle passes through the silicon, an electron-hole pair
+system. 
+
+In a silicon tracking system, the positions of particles are recorded
+due to the creation of drifting electron-hole pairs.
+When a charged particle passes through the silicon, an electron-hole pair
 is created, which drift under an applied electric field and produce a current
 that can be read out. %LEARN A BIT MORE ABOUT THIS
 
-The tracker, providing coverage up to $|\eta|<2.5$ consists of 
+The tracker, providing coverage up to $|\eta|<2.5$, consists of 
 several different components. A schematic of the tracking detector, indicating
-the location of these components, is given in figure \ref{fig:CMS_tracker}.
+the locations of these components, is given in figure \ref{fig:CMS_tracker}.
 Nearest the interaction point the tracker is a pixel detector made
 of 66 million silicon pixels, each 100 $\mu$m $\times$ 150 $\mu$m in size.
 The choice of this pixel size is driven by the achievable spatial resolution,
@@ -197,7 +185,7 @@ which is 15-20 $\mu$m in the $r$ and $z$ directions in this case. Such a
 precise resolution allows for 3D vertex reconstruction. The pixel
 detector consists of 3 layers of pixels in the barrel region, with 2 pixel disks 
 placed in the endcap region at either side. The barrel layers sit at radii of
-4.4, 7.3 and 10.2 cm and extend out up to $z=\pm 26.5$ cm. The disks are placed
+4.4, 7.3 and 10.2 cm and extend out to $z=\pm 26.5$ cm. The disks are placed
 at $z=\pm 34.5$ cm and $z=\pm 46.5$ cm. With this layout the pixel tracker can
 provide three precies position measurements along each charged particle trajectory.
 
@@ -213,8 +201,8 @@ on the plot represents a detector module}
 \end{figure}
 
 
-Beyond the pixel detector the tracking system is made up of a silicon
-strip detector consisting of multiple different subsystems. The first part of the
+Around the pixel detector the tracking system is made up of a silicon
+strip detector divided into four subsystems. The first part of the
 silicon strip tracker consists of the \ac{TIB} and \ac{TID}, providing four layers of
 silicon strip detectors in the barrel plus three disks at both ends. These two systems
 extend out towards a radius of 55 cm. The barrel layers and disks each consist
@@ -224,14 +212,14 @@ The \ac{TIB} and \ac{TID} are surrounded by the \ac{TOB}, which consists of six 
 up to an outer radius of 116 cm and up to $z=\pm 118$ cm. The strips in the \ac{TOB} are 500~$\mu$m thick, around 25 cm long and 122-183 $\mu$m 
 wide and this subdetector provides 6 measurements of $r$ and $\phi$, with a resolution
 of 35-53 $\mu$m. Beyond the z-range covered by the \ac{TOB}, coverage is provided by the \ac{TEC},
-consisting of nine disks of strips. In the \ac{TEC}, the strip thickness ranges from 320-500 $\mu$m and the the strip width ranges from $97-184 \mu m$.
+consisting of nine disks of strips. In the \ac{TEC}, the strip thickness ranges from 320-500 $\mu$m and the the strip width ranges from $97-184 \mu$m.
 This part of the system provides up to nine $\phi$ measurements.
 
 Some of the strip modules in the detector carry a second strip detector module mounted back-to-back with a stereo angle %FIXME WTF?
 of 100 mrad, in order to provide measurements of the $z-$ coordinate in the barrel. This is achieved with a resolution of 230-530 $\mu$m.
 
 The pixel tracker will be upgraded during the extended year-end technical stop in early 2017. This upgrade is needed to
-maintain the performance of the tracker as the pile-up increases \cite{cms-pixel-upgrade}. %or just replaced?
+maintain the performance of the tracker as the pile-up increases over the next few years \cite{cms-pixel-upgrade}. %or just replaced?
 
 
 \subsection{\acl{ECAL}}
@@ -266,24 +254,25 @@ shower producing a cascade of lower energy particles. Electrons lose
 energy through bremsstrahlung, with photons undergoing $\Pe^+ \Pe^-$ 
 pair production. The shower continues until the photon energy drops below the 
 $\Pe^+\Pe^-$ pair production threshold, and ionisation 
-starts to dominate for electrons. The shower ionises the crystals, 
-which return to their normal state by emitting scintillation light. 
+starts to dominate for electrons. The shower ionises the atoms in the lead-tungstate
+crystals, which then emit scintillation light that is converted to a current by the 
+photodetectors. 
 As the crystals are 25.8 radiation lengths long, most of the shower
 is contained inside them.
 
 Figure \ref{fig:CMS_ECAL} shows a schematic of the \ac{ECAL}, indicating
-the subsystems it is made up of. The \ac{ECAL} consists of different subsystems. The \ac{EB} 
+the subsystems it is made up of. The \ac{EB} 
 covers the pseudorapidity range up to $|\eta|<1.479$, with
 crystals of $0.0174 \times 0.0174$ in $\eta - \phi$. The \ac{EE}
-provides coverage beyond the range of the \ac{EB}, up to $|\eta|<3.0$
+provide coverage beyond the range of the \ac{EB}, up to $|\eta|<3.0$
 Each endcap is divided into two halves. In front of the endcaps 
 the preshower detectors, covering $1.653<|\eta|<2.6$ are sampling
 calorimeters whose main use is to indentify neutral pions in the endcaps. Additionally
-they help electron identification and improve the resolution
+the preshower detectors aid the identification of electrons and improve the resolution
 of position determination. Each of the two preshower detectors consist
 of two layers of lead radiators to initiate the shower, with silicon sensors
 placed after each layer of radiators to measure the deposited energy. The 
-total thickness of the preshower comprises 3 radiation lenghts.
+total thickness of the preshower is 3 radiation lengths.
 
 \begin{figure}[h!]
 \begin{center}
@@ -297,7 +286,7 @@ different components \cite{cms-jinst}.}
 To preserve the energy resolution, the \ac{ECAL} crystal and
 photodetector temperatures need to be kept stable within $\pm 0.05^{\circ}$C
 as the number of scintillation photons emitted by the crystals,
-and the amplification of the photodetectors are temperature dependent.
+and the amplification of the photodetectors, are temperature dependent.
 The nominal operating temperature, $18^{\circ}$C, is ensured by 
 supplying the detector with water at this temperature.
 
@@ -306,16 +295,14 @@ need to be used. In the \ac{EB} avalance photodiodes are employed
 for this, with vacuum phototriodes used in the \ac{EE}.
 
 The energy resolution of the \ac{ECAL} can be parameterised as
-
 \begin{equation}\label{eqn:ecalres}
 \frac{\sigma}{E} = \frac{S}{\sqrt{E}}\oplus\frac{N}{E}\oplus C,
 \end{equation}
-
 where $S$ is the stochastic term, $N$ the noise term and $C$ the constant term.
 The stochastic term arises from fluctuations in lateral shower containment and 
 fluctuations in scintillation, the noise term due to noise from the electronics
 and additional particles in the event, and the constant term comes
-from calibration errors, and non-uniformity of longitudinal response.
+from calibration errors and the non-uniformity of the longitudinal response.
 
 The values of $S$, $N$ and $C$ have been measured in an electron
 test-beam, without a magnetic field or material in front of the \ac{ECAL}, as 
@@ -326,20 +313,21 @@ $S = 0.028$ GeV$^{\frac{1}{2}}$, $N = 0.12$ GeV and $C= 0.003$.
 
 \subsection{\acl{HCAL}}
 \label{sec:CMSLHC_CMS_hcal}
-The \ac{ECAL} is surrounded by the \ac{HCAL}, which is important for the
+The \ac{ECAL} is surrounded by the \ac{HCAL} \cite{cms-jinst}, which is needed for the
 measurement of the energies of strongly interacting particles. As
 the \ac{ECAL} extends out to a radius of 1.77 m and the magnet coil
 starts at a radius of 2.95 m, space for the \ac{HCAL} inside the magnet
 coil is limited. The \ac{HCAL} design takes
-this into account by placing part of the subdetector outside the magnet coil. A schematic of the
-\ac{HCAL}, indicating the different components of the \ac{HCAL} is shown
+this into account by placing part of the calorimeter outside the magnet coil. An
+illustration of a quadrant of the
+\ac{HCAL}, indicating the positions of the subsystems, is shown
 in figure \ref{fig:CMS_HCAL}.
 
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[width=0.9\textwidth]{./Detector/Plots/HCAL.png}
-\caption{Illustration of the \ac{HCAL}, indicating the geometry
-of the detector \cite{cms-jinst}.}
+\caption{Illustration of a quadrant of the \ac{HCAL}, showing the different
+subsystems of the detector \cite{cms-jinst}.}
 \label{fig:CMS_HCAL}
 \end{center}
 \end{figure}
@@ -351,21 +339,22 @@ plates with tiles of plastic scintillator as the active material. The brass used
 absorber fits the constraints imposed by the environment due to its short interaction length
 of 16.42 cm and the fact that it is non-magnetic. The tiles of scintillator 
 are $0.087 \times 0.087$ in $\eta-\phi$ for $|\eta|<1.6$ and $0.17\times0.17$ in $\eta-\phi$
-beyond this range. 
-The light from each tile is collected with a wavelength-shifting fibre, 
-which is read out using a hybrid photodiode. In the barrel, the \ac{HCAL}
-has a thickness of between 5.82 and 10.6 interaction lenghts, which is not 
+beyond this range. The light from each tile is collected with a wavelength-shifting fibre, 
+which is read out using hybrid photodiodes. 
+
+In the barrel, the \ac{HCAL}
+has a thickness of between 5.82 and 10.6 interaction length, which is not 
 sufficient to identify for example late-starting showers. The \ac{HO}, sitting
 outside of the magnet and using the coil as an additional absorber, extends the 
-thickness to at least 11.8 interaction lenghts. 
+thickness to at least 11.8 interaction lengths. 
 Like in the \ac{HB} the active material of the \ac{HO} consists of plastic scintillator tiles which roughly
 map the granularity of the tiles in the \ac{HB}, and are read out by feeding the light
-to a hybrid photodiode via wavelength shifting fibres.
+to a hybrid photodiode via wavelength-shifting fibres.
 %WTF: wavelength-shifting fibres
 
 The \ac{HF}, providing coverage in the very forward region, is 
 subjected to large radiation doses, requiring an extremely
-radiation hard active material. For this reason quartz
+radiation-hard active material. For this reason quartz
 fibres are used as active material. These fibres are embedded
 in the steel absorber structure. Charged particles from the
 shower initiated in the steel generate Cherenkov light in 
@@ -378,11 +367,9 @@ the quartz fibres, which is read out by photomultiplier tubes.
 The energy resolution of the \ac{HCAL} for single charged pions 
 was measured in a test beam \cite{cms-hcalecal}
 and can be parameterised as 
-
 \begin{equation}\label{eqn:hcal_res}
 \frac{\sigma}{E} = \frac{S}{\sqrt{E}} \oplus C,
 \end{equation}
-
 where $S$ is the stochastic term, found to be 94.3\% %pm 1.2
 and $C$ is the constant term, measured to be 8.4\% %pm 1.0
 
@@ -395,21 +382,21 @@ next few years \cite{cms-hcal-upgrade}.
 \subsection{Muon system}
 \label{sec:CMSLHC_CMS_muons}
 Precise muon identification is one of the requirements of the \ac{CMS} 
-experiment. Good muon identification efficiency and precision muon momentum 
-resolution are very important, as muons appear as final states in many
-\ac{BSM} signatures the experiment is used to search for. In addition to
-that, final states with muons are very important for the detection of $H\rightarrow ZZ \rightarrow 4\ell$ decays.
+experiment. Good muon identification efficiency and precise muon momentum 
+resolution are key to the success of the experiment, as muons are
+very important for the detection of $H\rightarrow ZZ \rightarrow 4\ell$ decays. In addition to that,
+muons appear in the final states of many \ac{BSM} signatures the experiment is used to search for.
 
 The \ac{CMS} muon system \cite{cms-jinst} is made up out of three different subsystems which
 are all necessary to ensure the identification requirements can be met. It is located
 outside of the magnet coil, interspersed in the iron return yoke of the solenoid.
 In the barrel of the detector the \ac{DT} chambers provide coverage for $|\eta|<1.2$, with
 the \ac{CSCs} covering the $0.9<|\eta|<2.4$ region. The \ac{RPCs}, covering the same
-regions as both \ac{DT} and \ac{CSCs}, is used as a dedicated triggering system.
+regions as both \ac{DT} and \ac{CSCs}, are used as a dedicated triggering system.
 
 A cross-section of one quadrant of the detector, indicating
-the positions of the \ac{DT},\ac{CSCs} and \ac{RPCs}, is shown in figure \ref{fig:CMS_MuonSystem}.
-The top of the fourth muon endcap station as shown in this figure was added during \ac{LS1}, providing
+the positions of the \ac{DT}, \ac{CSCs} and \ac{RPCs}, is shown in figure \ref{fig:CMS_MuonSystem}.
+The top of the fourth muon endcap station as shown in this figure was added during \ac{LS1} \cite{cms-muon-upgrade}, providing
 additional layers of \ac{CSCs} and \ac{RPCs}.
 \begin{figure}[h!]
 \begin{center}
@@ -421,7 +408,6 @@ part existed.}
 \label{fig:CMS_MuonSystem}
 \end{center}
 \end{figure}
-
 The \ac{DT} consists of layers of drift cells which have a cross-section of $4.2 \times 1.3$ cm$^2$ and
 are 2.4 m long. The cells are filled with a mixture of %85\% 
 argon and carbon di-oxide gas.
@@ -435,8 +421,7 @@ of the z-coordinate. Measurements of the spatial resolution were made
 during proton--proton running of the \ac{LHC} in 2010.
 The spatial resolution of the \ac{DT} is 80-120 $\mu$m per chamber for
 measurements in the $\phi$ direction, while the resolution of the $z$ measurement
-is 130-400 $\mu$m\cite{cms-muon-7tev}.
-%Drift lines distorted by magnetic field parallel to the wires
+is 130-400 $\mu$m\cite{cms-muon-7tev}. %Drift lines distorted by magnetic field parallel to the wires
 
 In the endcaps, where the muon rate is higher, the \ac{CSCs} provide
 measurements of the muon track. These detectors are radiation-hard,
@@ -445,7 +430,7 @@ Each of the CSC modules is a wedge-shaped
 multi-wire proportional chamber %WTF
 with 6 gaseous chambers bounded by cathode planes, with
 sensitive strips placed on these plates in the
-radial direction, to measure the muon coordinate in the  $r-\phi$ plane
+radial direction, to measure the muon coordinate in the  $r-\phi$ plane.
 Anode wires in between the cathode planes
 run along the $\phi$ direction and provide a measurement of
 $\eta$. The resolution of the $r-\phi$ measurement is 40-120 $\mu$m \cite{cms-muon-7tev}.
@@ -471,7 +456,7 @@ between 15-40\% for muons with \pT~of 1 TeV \cite{cms-jinst}.
 
 \subsection{Triggering and data processing}
 \label{sec:CMSLHC_CMS_trigger}
-When the \ac{LHC} is operating under standard conditions, protons are collided at a rate
+When the \ac{LHC} is operating under design conditions, protons are collided at a rate
 of 40 MHz. This rate is too high for the \ac{DAQ} system to read out every event. In
 addition this high collision rate produces such a large number of events that it would
 not be feasible to write every single event, with sizes of around 1 MB, to tape. A trigger
@@ -514,7 +499,7 @@ can return a sorted list of the best muon candidates to the global trigger.
 The global trigger combines the information from the calorimeter and muon triggers
 to make a decision on whether the event should be sent to the \ac{HLT} or whether
 it should be discarded. A decision has to be made within 3.2 $\mu$s, the maximum time during
-which data can be stored in the front-end electronics before being lost.
+which data can be stored in the \ac{L1} trigger before being lost.
 
 %The muon trigger is a tracking trigger that measures the momentum of muons using the magnetic field in the steel yoke of the CMS solenoid; thus its resolution degrades with increasing momentum. This can be improved by maximizing the number of chamber hits along a muon trajectory and by improving the precision and number of position and angular measurements participating in the track fit applied in the trigger logic. Moreover, isolation criteria can be applied using the energy deposits in the calorimeter in order to further reduce the rate of muons from heavy flavor jets.
 
@@ -535,7 +520,7 @@ of large sets of simulated events.
 To make these large amounts of data easily available for analysis, 
 \ac{CMS} and the other \ac{LHC} experiments make use of the \ac{WLCG} \cite{lhc-wlcg}. 
 The \ac{WLCG} pools the resources of computer centres at universities and research
-laboratories around the world, based on a system of tiers. The Tier 0, at \ac{CERN} and
+laboratories associated with \ac{LHC} experiments, based on a system of tiers. The Tier 0, at \ac{CERN} and
 the Wigner Research Centre for Physics in Budapest, performs the full reconstruction
 and saves a copy of the data to tape. Datasets are copied to at least one Tier 1 centre, from
 where data can be distributed to Tier 2 centres. The Tier 2 centres are located
