--- a/thesis.tex
+++ b/thesis.tex
@@ -50,6 +50,7 @@
 %% Start the content body of the thesis
 \begin{mainmatter}
   \input{Detector/Detector}
+  \input{Objects/Objects}
   \input{Hhh/hhh}
 \end{mainmatter}
 
