Fixing up another comment on the detector chapter

--- a/Detector/Detector.tex
+++ b/Detector/Detector.tex
@@ -252,11 +252,11 @@ shower producing a cascade of lower energy particles. Electrons lose
 energy through bremsstrahlung, with photons undergoing $\Pe^+ \Pe^-$ 
 pair production. The shower continues until the photon energy drops below the 
 $\Pe^+\Pe^-$ pair production threshold, and ionisation 
-starts to dominate for electrons. The shower ionises [IS THIS WHAT HAPPENS?] the atoms in the lead-tungstate
+starts to dominate for electrons. The shower excites the atoms in the lead-tungstate
 crystals, which then emit scintillation light that is converted to a current by the 
 photodetectors. To record the light of the crystals, amplifying photodetectors need
 to be used, with avalanche photodiodes used in the barrel region, and vacuum phototriodes employed
-in the endcaps.
+in the endcaps. %Because of the larger radiation levels in the endcaps
 As the crystals are 25.8 radiation lengths long, most of the shower
 is contained inside them.
 
@@ -335,6 +335,8 @@ coverage up to $|\eta|<1.3$. Beyond this $\eta$ range the \ac{HE} covers
 the region up to $|\eta|<3$. The \ac{HB} and \ac{HE} are sampling calorimeters made of brass absorber
 plates with tiles of plastic scintillator as the active material. The brass used as 
 absorber fits the constraints imposed by the environment due to its short interaction length
+%Nuclear interaction length is the mean path length required to reduce the numbers of relativistic charged particles by the factor 1/e, or 0.368, as they pass through matter.
+%Nuclear interaction length is the mean distance travelled by a hadronic particle before undergoing an inelastic nuclear interaction.
 of 16.42 cm and the fact that it is non-magnetic. The tiles of scintillator 
 are $0.087 \times 0.087$ in $\eta-\phi$ for $|\eta|<1.6$ and $0.17\times0.17$ in $\eta-\phi$
 beyond this range. The light from each tile is collected with a wavelength-shifting fibre, 
@@ -447,7 +449,7 @@ To obtain precise muon momentum resolution, information from
 the tracker hits has to be combined with measurements in the
 muon stations. The momentum resolution of the muon system
 alone is 9\% for muons with \pT~up to 200 GeV, and varies with $\eta$ 
-between 15-40\% for muons with \pT~of 1 TeV \cite{cms-jinst}. ADD FORMULA
+between 15-40\% for muons with \pT~of 1 TeV \cite{cms-jinst}. %ADD FORMULA
 
 
 %Because of the uncertainty in the eventual background rates and in the ability of the muon system to measure the correct beam-crossing time when the LHC reaches full luminosity, a com- plementary, dedicated trigger system consisting of resistive plate chambers (RPC) was added in both the barrel and endcap regions. The RPCs provide a fast, independent, and highly-segmented trigger with a sharp pT threshold over a large portion of the rapidity range (|η| < 1.6) of the muon system. The RPCs are double-gap chambers, operated in avalanche mode to ensure good operation at high rates. They produce a fast response, with good time resolution but coarser position reso- lution than the DTs or CSCs. They also help to resolve ambiguities in attempting to make tracks from multiple hits in a chamber.
