Adding a little bit about PF

--- a/Objects/Objects.tex
+++ b/Objects/Objects.tex
@@ -7,8 +7,15 @@ descriptions correspond to the algorithms as used during Run 2. Where there are 
 between the algorithms used in Run 1 and Run 2 this will be discussed at the end
 of the relevant section.
 
-\section{Particle Flow}
+\section{\acl{PF}}
 \label{sec:objects_pf}
+All stable particles are reconstructed and identified using the \ac{PF} algorithm, which
+combines the information from all of the different subdetectors of \ac{CMS}. This makes
+the identification of particles, and determination of position and momentum, as precise
+as possible. All of these particles are then used to build for example jets, \MET and hadronically
+decaying taus.
+
+
 
 \section{Tracks and vertices}
 \label{sec:objects_pv}
